--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </header>
 
         <div class="content">
-            <img src="https://lh4.googleusercontent.com/wOw7AA_WVKxMLbOsApt_q9S01a4ksnI0B-p3ympoVMy09CjQa7fcMjlei0fPUmA2pwUp4-JGzY_TCuF6yBNdGSABxEi_CVIU6_xDR_jV8L5XUS90UBwZLHKoU3hrPchNKg=w1280" alt="Birthday Gade" style="width: 150px; border-radius: 50%; margin-bottom: 20px;">
+            <img src="gade1.jpg" alt="Birthday Gade" style="width: 150px; border-radius: 50%; margin-bottom: 20px;">
             <p style="margin-bottom: 15px; line-height: 1.6;">Wishing you a year filled with happiness, success, and all the love you deserve!</p>
             <p style="margin-bottom: 10px; line-height: 1.6;">May every day bring you joy, laughter, and exciting new adventures.</p>
             <p style="margin-bottom: 10px; line-height: 1.6;">Keep shining and being the amazing person you are! 🌟💖</p>
