--- a/page2.html
+++ b/page2.html
@@ -95,7 +95,7 @@
         </header>
 
         <div class="content">
-            <img src="https://lh3.googleusercontent.com/aWr6LiuOOcFXy02jnDjFT91HLW76Jdl4YQovQqRPenTIpUdDw0VE6pwrzqmFskhzl_Ak3_Nd2EDRvkHz5iFzv_hjAQdVvy07UTnzgMts-64Z_doWaDYibG7i6ivleK055A=w1280" alt="Birthday Gade 2">
+            <img src="gade2.jpg" alt="Birthday Gade 2">
             <p>Congratulations! You have officially leveled up! 🆙✨</p>
             <p>But remember, with great age comes great responsibility...</p>
             <p>like remembering where you put your phone. 📱🤦‍♂️</p>
