--- a/page3.html
+++ b/page3.html
@@ -96,7 +96,7 @@
         </header>
 
         <div class="content">
-            <img src="https://lh3.googleusercontent.com/tAVCucKk4g6g0rnL0cwAotz9h4284sqIJXRBRQ7d_UXudH8wZRqzMsF8hAXKUr0jXDFWNmJNrkBke6-3CsflcoQaPGFT4GxziaBvYkKnMWnZ0t6y3cj1FsNg9U0aqD-XXw=w1280" alt="Birthday Gade 3">
+            <img src="gade3.jpg" alt="Birthday Gade 3">
             <p>Guess what? I was going to get you the most amazing gift ever…</p>
             <p>but then I remembered, you already have me as a amazing gift in your life! 😏💖</p>
             <p>So, you're welcome. 🎁😂</p>
