--- a/page5.html
+++ b/page5.html
@@ -84,8 +84,8 @@
 </head>
 <body>
     <div class="cake-container">
-        <img id="cake-image" src="https://lh3.googleusercontent.com/sjQQrcaGWjKU6jlr7sPgvLSLPPYO-uZVSTWsYDR6IDK4vFPy4g5DZcXbFQJ_bi3AFsJZwfu6YSSVHwu_Xn5tWXA=w1280" alt="เค้กวันเกิดก่อนเป่า">
-        <img id="blowing-gif" src="https://lh3.googleusercontent.com/PHBCaReTV3EJHOP0r5f7FMh0McoH9CUtuZ8hxj9ZXwoSndmvErvt3qi103ZC3rd_352xsM_zxIgiIYqj3tHg37U=w1280" alt="GIF เป่าเค้ก">
+        <img id="cake-image" src="cake-before.png" alt="เค้กวันเกิดก่อนเป่า">
+        <img id="blowing-gif" src="cake-blowing.gif" alt="GIF เป่าเค้ก">
     </div>
 
     <button id="blow-button">เป่าเค้ก!</button>
@@ -110,7 +110,7 @@
                 triggerBalloons(); // เรียกฟังก์ชันลูกโป่งเมื่อเริ่มเป่า
             } else {
                 blowingGif.style.display = 'none';
-                cakeImage.src = 'https://lh5.googleusercontent.com/z04obCgYlfhSaAJ12dWClTZ2D-ZaZuxNv6sS2Uhu4FvAB4tZCLV6l79bD56SZ3VkK2CIJu-P-gQ5ZAv1SA5Z6a4=w1280';
+                cakeImage.src = 'cake-after.png';
                 cakeImage.alt = 'เค้กวันเกิดหลังเป่า';
                 cakeImage.style.display = 'block';
                 blowButton.textContent = 'เป่าอีกครั้ง?';
